...
              size: 80,
            ),

            const SizedBox(height: 20),

            const Text(
              'Sistema da Biblioteca',
              style: TextStyle(
                fontSize: 24,
                fontWeight: FontWeight.bold,
              ),
            ),

...
                          onContarEmprestimosAtivos: _firestoreEmprestimosService.contarEmprestimosAtivos,
                        );
                      },
                    ),
                  );
                },
                child: const Text('Livros'),
            ),

            const SizedBox(height: 15),

            ElevatedButton(
              onPressed: () async {
...
                        'Não foi possível carregar os alunos.',
                      ),
                    ),
                  );
                }
              },
              child: const Text('Alunos'),
            ),

            const SizedBox(height: 15),

            ElevatedButton(
              onPressed: _carregandoLivros
...
                        'Não foi possível carregar os dados dos empréstimos.',
                      ),
                    ),
                  );
                }
              },
              child: const Text('Empréstimos'),
            ),
          ],
        ),
      ),
    );
  }
...
