...
                        onCadastrar: widget.onAdicionarAluno,
                      );
                    },
                  ),
                );
              },
              child: const Text('Cadastrar Aluno'),
            ),

            const SizedBox(height: 16),

            ElevatedButton(
              onPressed: () {
...
                        onExcluirAluno: widget.onExcluirAluno,
                      );
                    },
                  ),
                );
              },
              child: const Text('Listar Alunos'),
            ),
          ],
        ),
      ),
    );
  }
...
