...
                        onCadastrar: widget.onAdicionarLivro,
                      );
                    },
                  ),
                );
              },
              child: const Text('Cadastrar Livro'),
            ),

            const SizedBox(height: 20),

            ElevatedButton(
              onPressed: () {
...
                        onContarEmprestimosAtivos: widget.onContarEmprestimosAtivos,
                      );
                    },
                  ),
                );
              },
              child: const Text('Listar Livros'),
            ),
          ],
        ),
      ),
    );
  }
...
